Bug 1336356 - Ensure MediaDecode::Shutdown() is called by MediaShutdownManager::BlockShutdown(). r=gerald, a=lizzard

MozReview-Commit-ID: 80AFMafXoeB

--HG--
extra : source : 7ca33be035c12485e0d6529c529b0cda914fd405
extra : intermediate-source : b2d14d738d2c38bd56225340b4dad320fe50bc7d