dom/media/MediaShutdownManager.cpp
@@ -154,12 +154,7 @@ MediaShutdownManager::BlockShutdown(nsIAsyncShutdownClient*)
 
   // Iterate over the decoders and shut them down.
   for (auto iter = mDecoders.Iter(); !iter.Done(); iter.Next()) {
-    MediaDecoderOwner* owner = iter.Get()->GetKey()->GetOwner();
-    if (owner) {
-      // The owner will call MediaDecoder::Shutdown() and
-      // drop its reference to the decoder.
-      owner->NotifyXPCOMShutdown();
-    }
+    iter.Get()->GetKey()->NotifyXPCOMShutdown();
     // Check MediaDecoder::Shutdown doesn't call Unregister() synchronously in
     // order not to corrupt our hashtable traversal.
     MOZ_ASSERT(mDecoders.Count() == oldCount);
